--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "tsc",
-    "start": "tsc; node dist/index.js"
+    "dev:start": "tsc; node dist/index.js",
+    "start": "node dist/index.js"
   },
   "repository": {
     "type": "git",
